--- a/doc/basewiki.mdwn
+++ b/doc/basewiki.mdwn
@@ -6,15 +6,16 @@ It currently includes these pages:
 
 * [[index]]
 * [[sandbox]]
-* [[blog]]
-* [[HelpOnFormatting]]
-* [[markdown]]
-* [[openid]]
-* [[pagespec]]
-* [[PreprocessorDirective]]
 * [[shortcuts]]
-* [[subpage]]
-* [[wikilink]]
+* [[templates]]
+* [[ikiwiki/blog]]
+* [[ikiwiki/formatting]]
+* [[ikiwiki/markdown]]
+* [[ikiwiki/openid]]
+* [[ikiwiki/pagespec]]
+* [[ikiwiki/PreprocessorDirective]]
+* [[ikiwiki/subpage]]
+* [[ikiwiki/wikilink]]
 
 As well as a few other files, like [[favicon.ico]], [[local.css]],
 [[style.css]], and some icons.
