--- a/doc/plugins/aggregate.mdwn
+++ b/doc/plugins/aggregate.mdwn
@@ -12,8 +12,8 @@ That example aggregates posts from the specified RSS feed, updating no
 more frequently than once every 15 minutes, and puts a page per post under
 the example/ directory in the wiki.
 
-You can then use ikiwiki's [[blog]] support to create a blog of one or more
-aggregated feeds.
+You can then use ikiwiki's [[ikiwiki/blog]] support to create a blog of one or
+more aggregated feeds.
 
 ## setup
 
