--- a/doc/plugins/brokenlinks.mdwn
+++ b/doc/plugins/brokenlinks.mdwn
@@ -5,8 +5,8 @@ This plugin generates a list of broken links on pages in the wiki. This is
 a useful way to find pages that still need to be written, or links that
 are written wrong.
 
-The optional parameter "pages" can be a [[PageSpec]] specifying the pages
-to search for broken links, default is search them all.
+The optional parameter "pages" can be a [[ikiwiki/PageSpec]] specifying the
+pages to search for broken links, default is search them all.
 
 If this plugin is turned on, here's a list of broken links on this wiki:
 
