--- a/doc/plugins/calendar.mdwn
+++ b/doc/plugins/calendar.mdwn
@@ -33,7 +33,7 @@ the given time frame.
 
 * `type` - Used to specify the type of calendar wanted. Can be one of
   "month" or "year". The default is a month view calendar.
-* `pages` - Specifies the [[PageSpec]] of pages to link to from the
+* `pages` - Specifies the [[ikiwiki/PageSpec]] of pages to link to from the
   month calendar. Defaults to "*".
 * `archivebase` - Configures the base of the archives hierarchy. The
   default is "archives". Note that this default can also be overridden
