--- a/doc/plugins/inline.mdwn
+++ b/doc/plugins/inline.mdwn
@@ -1,10 +1,10 @@
 [[template id=plugin name=inline core=1 author="[[Joey]]"]]
 
-This is a [[PreProcessorDirective]] that allows including one wiki page
+This is a [[ikiwiki/PreProcessorDirective]] that allows including one wiki page
 inside another. For example:
 
 	\[[inline pages="blog/*"]]
 
 The most common use of inlining is generating blogs and RSS or Atom feeds.
-See [[blog]] for details.
+See [[ikiwiki/blog]] for details.
 
