--- a/doc/plugins/linkmap.mdwn
+++ b/doc/plugins/linkmap.mdwn
@@ -17,7 +17,7 @@ wiki a bit slow.
 Here are descriptions of all the supported parameters to the `linkmap`
 directive:
 
-* `pages` - A [[PageSpec]] of the pages to map.
+* `pages` - A [[ikiwiki/PageSpec]] of the pages to map.
 * `height`, `width` - Limit the size of the map to a given height and width,
   in inches. Both must be specified for the limiting to take effect, otherwise
   the map's size is not limited.
