--- a/doc/plugins/mdwn.mdwn
+++ b/doc/plugins/mdwn.mdwn
@@ -2,7 +2,7 @@
 [[tag type/format]]
 
 This plugin lets ikwiki convert files with names ending in ".mdwn" to html.
-It uses the [[markdown]] minimal markup language.
+It uses the [[ikiwiki/markdown]] minimal markup language.
 
 This is the standard markup language used by ikiwiki, although some others
 are also available in other plugins.
