--- a/doc/plugins/postsparkline.mdwn
+++ b/doc/plugins/postsparkline.mdwn
@@ -21,8 +21,8 @@ options are passed on to the sparkline plugin.
 
 You don't need to specify any data points (though you can if you want to).
 Instead, data points are automatically generated based on the creation
-times of pages matched by the specified `pages` [[PageSpec]]. A maximum of
-`max` data points will be generated.
+times of pages matched by the specified `pages` [[ikiwiki/PageSpec]]. A
+maximum of `max` data points will be generated.
 
 The `formula` parameter controls the formula used to generate data points.
 Available forumlae:
