--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -119,7 +119,7 @@ span also doesn't work:
 
 ----
 
-This sandbox is also a [[blog]]!
+This sandbox is also a [[ikiwiki/blog]]!
 
 [[inline pages="sandbox/* and !*/Discussion" rootpage="sandbox" show="4" archive="yes"]]
 
