--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -41,7 +41,7 @@ In the editor, you could start by entering a simple page like
 	This wiki is powered by [ikiwiki](http://ikiwiki.info).
 """]]
    
-See [[HelpOnFormatting]] for details about the markup language.
+See [[ikiwiki/formatting]] for details about the markup language.
 
 Note that several [[standard_wiki_pages|basewiki]] will be added to your
 wiki, from files in `/usr/share/ikiwiki/basewiki/`, so your wiki will
