--- a/doc/todo/htmlvalidation.mdwn
+++ b/doc/todo/htmlvalidation.mdwn
@@ -32,7 +32,7 @@
 
     Ah didn't realize you meant it fixed it at the markdown level. I'll
     think about making postprocessordirectives into
-    [[preprocessordirective]]s instead, then I could use that fix (but I'm not
+    [[ikiwiki/preprocessordirective]]s instead, then I could use that fix (but I'm not
     sure how feasible it is to do that). --[[Joey]]
 
     Done.. inlining is now a preprocessor directive, happens before
