--- a/doc/todo/review_mechanism.mdwn
+++ b/doc/todo/review_mechanism.mdwn
@@ -15,7 +15,7 @@ This would be done in a way that would trigger the appropriate VCS merge operati
 A generic "change queue" mechanism could be used for translations or other stuff as well.
 Each change would have its own wiki page under changes/revNNNN.
 Change queues would be wiki pages as well (probably using [[inlines|plugins/inline]]);
-[[Pagespecs|Pagespec]] and [[tags]] would be used to control the queues to which a given change would belong.
+[[Pagespecs|ikiwiki/Pagespec]] and [[tags]] would be used to control the queues to which a given change would belong.
 
 --[[JeremieKoenig]]
 
