--- a/doc/wikitemplates.mdwn
+++ b/doc/wikitemplates.mdwn
@@ -17,9 +17,9 @@ located in /usr/share/ikiwiki/templates by default.
   changes to a page.
 * `passwordmail.tmpl` - Not a html template, this is used to
   generate the mail with the user's password in it.
-* `rsspage.tmpl` - Used for generating rss feeds for [[blog]]s.
+* `rsspage.tmpl` - Used for generating rss feeds for [blogs|[ikiwiki/blog]].
 * `rssitem.tmpl` - Used for generating individual items on rss feeds.
-* `atompage.tmpl` - Used for generating atom feeds for [[blog]]s.
+* `atompage.tmpl` - Used for generating atom feeds for blogs.
 * `atomitem.tmpl` - Used for generating individual items on atom feeds.
 * `inlinepage.tmpl` - Used for adding a page inline in a blog
   page.
