--- a/underlays/basewiki/pagespec.mdwn
+++ b/underlays/basewiki/pagespec.mdwn
@@ -1,1 +1,5 @@
-../../doc/pagespec.mdwn
+[[meta redir=ikiwiki/pagespec delay=10]]
+
+This page has moved to [[ikiwiki/pagespec|ikiwiki/pagespec]]. Please update
+your links, as this redirection page will be removed in a future ikiwiki
+release.
