--- a/underlays/basewiki/subpage.mdwn
+++ b/underlays/basewiki/subpage.mdwn
@@ -1,1 +1,5 @@
-../../doc/subpage.mdwn
+[[meta redir=ikiwiki/subpage delay=10]]
+
+This page has moved to [[ikiwiki/subpage|ikiwiki/subpage]]. Please update your
+links, as this redirection page will be removed in a future ikiwiki
+release.
