--- a/doc/bugs/brokenlinks_false_positives.mdwn
+++ b/doc/bugs/brokenlinks_false_positives.mdwn
@@ -1,6 +1,6 @@
 The [[plugins/brokenlinks]] plugin falsely complains that
-[[helponformatting]] has a broken link to [[smileys]], if the smiley plgin
-is disabled. While the helponformatting page links to it inside a
+[[ikiwiki/formatting]] has a broken link to [[smileys]], if the smiley plgin
+is disabled. While the page links to it inside a
 conditional, and so doesn't show the link in this case, ikiwiki scans for
 links w/o looking at conditionals and so still thinks the page contains the
 link.
