--- a/doc/ikiwiki/markdown.mdwn
+++ b/doc/ikiwiki/markdown.mdwn
@@ -2,7 +2,7 @@
 is a minimal markup language that resembles plain text as used in
 email messages. It is the markup language used by this wiki by default.
 
-For documentation about the markdown syntax, see [[HelpOnFormatting]] and
+For documentation about the markdown syntax, see [[formatting]] and
 [Markdown: syntax](http://daringfireball.net/projects/markdown/syntax). A
 [markdown mode](http://jrblevin.freeshell.org/software/markdown-mode/) for 
 emacs can help in editing.
@@ -10,4 +10,3 @@ emacs can help in editing.
 Note that [[WikiLink]]s and [[PreProcessorDirective]]s are not part of the
 markdown syntax, and are the only bit of markup that this wiki handles
 internally.
-
