--- a/doc/plugins/conditional.mdwn
+++ b/doc/plugins/conditional.mdwn
@@ -15,17 +15,17 @@ The `then` and `else` values can include any markup that would be allowed
 in the wiki page outside the template. Triple-quoting the values even allows
 quotes to be included.
 
-The `test` is a [[PageSpec]]; if it matches any page in the wiki then it
-succeeds. So you can do things like testing for the existence of a page or
-pages, testing to see if any pages were created in a given month, and so
-on.
+The `test` is a [[ikiwiki/PageSpec]]; if it matches any page in the wiki
+then it succeeds. So you can do things like testing for the existence of a
+page or pages, testing to see if any pages were created in a given month,
+and so on.
 
-If you want the [[PageSpec]] to only match against the page that
+If you want the [[ikiwiki/PageSpec]] to only match against the page that
 contains the conditional, rather than matching against all pages in the
 wiki, set the "all" parameter to "no".
 
-The regular [[PageSpec]] syntax is expanded with the following additional
-tests:
+The regular [[ikiwiki/PageSpec]] syntax is expanded with the following
+additional tests:
 
 * enabled(plugin)
 
