--- a/doc/plugins/pagecount.mdwn
+++ b/doc/plugins/pagecount.mdwn
@@ -1,11 +1,11 @@
 [[template id=plugin name=pagecount author="[[Joey]]"]]
 [[tag type/meta]]
 
-Provides a \\[[pagecount ]] [[PreProcessorDirective]] that is replaced with
-the total number of pages currently in the wiki.
+Provides a \\[[pagecount ]] [[ikiwiki/PreProcessorDirective]] that is
+replaced with the total number of pages currently in the wiki.
 
-The optional parameter "pages" can be a [[PageSpec]] specifying the pages
-to count, default is to count them all.
+The optional parameter "pages" can be a [[ikiwiki/PageSpec]] specifying the
+pages to count, default is to count them all.
 
 This plugin is included in ikiwiki, but is not enabled by default.
 
