--- a/doc/plugins/rst.mdwn
+++ b/doc/plugins/rst.mdwn
@@ -11,7 +11,7 @@ ikiwiki. Limitations include:
 
 * There are issues with inserting raw html into documents, as ikiwiki 
   does with [[WikiLinks|WikiLink]] and many 
-  [[PreprocessorDirectives|PreprocessorDirective]].
+  [[PreprocessorDirectives|ikiwiki/PreprocessorDirective]].
 
 So while you may find this useful for importing old files into your wiki,
 using this as your main markup language in ikiwiki isn't recommended at
