--- a/doc/plugins/sidebar.mdwn
+++ b/doc/plugins/sidebar.mdwn
@@ -6,13 +6,13 @@ The content of the sidebar is simply the content of a page named
 "sidebar" (ie, create a "sidebar.mdwn").
 
 Typically this will be a page in the root of the wiki, but it can also be a
-[[SubPage]]. In fact, this page, [[plugins/sidebar|plugins/sidebar]], will
-be treated as a sidebar for the [[plugins]] page, and of all of its
-SubPages, if the plugin is enabled.
+[[ikiwiki/SubPage]]. In fact, this page,
+[[plugins/sidebar|plugins/sidebar]], will be treated as a sidebar for the
+[[plugins]] page, and of all of its SubPages, if the plugin is enabled.
 
-Note that to disable a sidebar for a [[SubPage]] of a page that has a sidebar,
-you can create a sidebar page that is completely empty. This will turn off
-the sidebar altogether.
+Note that to disable a sidebar for a [[ikiwiki/SubPage]] of a page that has
+a sidebar, you can create a sidebar page that is completely empty. This
+will turn off the sidebar altogether.
 
 Warning: Any change to the sidebar will cause a rebuild of the whole wiki,
 since every page includes a copy that has to be updates. This can
