--- a/doc/plugins/testpagespec.mdwn
+++ b/doc/plugins/testpagespec.mdwn
@@ -1,22 +1,23 @@
 [[template id=plugin name=testpagespec author="[[Joey]]"]]
 [[tag type/useful]]
 
-This plugin allows testing a [[PageSpec]] to see if it matches a page, and
-to see the part that matches, or causes the match to fail.
+This plugin allows testing a [[ikiwiki/PageSpec]] to see if it matches a
+page, and to see the part that matches, or causes the match to fail.
 
 Example uses:
 
 	\[[testpagespec pagespec="foopage and barpage" match="foopage"]]
 
-This will print out something like "no match: barpage does not match foopage",
-highlighting which part of the [[PageSpec]] is causing the match to fail.
+This will print out something like "no match: barpage does not match
+foopage", highlighting which part of the [[ikiwiki/PageSpec]] is causing
+the match to fail.
 	
 	\[[testpagespec pagespec="foopage or !bar*" match="barpage"]]
 
 This will print out something like "no match: bar* matches barpage", since
-the part of the [[PageSpec]] that fails is this negated match.
+the part of the [[ikiwiki/PageSpec]] that fails is this negated match.
 	
 	\[[testpagespec pagespec="foopage or barpage" match="barpage"]]
 
 This will print out something like "match: barpage matches barpage",
-indicating the part of the [[PageSpec]] that caused it to match.
+indicating the part of the [[ikiwiki/PageSpec]] that caused it to match.
