--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -57,13 +57,14 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=zooomr url="http://www.zooomr.com/photos/%s"]]
   * Note: You have to include the username and number in here, such as `bob/123455`.
 
-To add a new shortcut, use the `shortcut` [[PreprocessorDirective]]. "%s" is
-replaced with the text passed to the named shortcut. The optional `desc`
-parameter controls the description of the link.
+To add a new shortcut, use the `shortcut`
+[[ikiwiki/PreprocessorDirective]]. In the url, "%s" is replaced with the
+text passed to the named shortcut. The optional `desc` parameter controls
+the description of the link.
 
 Remember that the `name` you give the shortcut will become a new
-[[PreprocessorDirective]].  Avoid using a `name` that conflicts with an
-existing directive.
+[[ikiwiki/PreprocessorDirective]].  Avoid using a `name` that conflicts
+with an existing directive.
 
 If you come up with a shortcut that you think others might find useful,
 consider contributing it to the [[iki shortcuts]] page on the ikiwiki
