--- a/doc/todo/absolute_urls_in_wikilinks.mdwn
+++ b/doc/todo/absolute_urls_in_wikilinks.mdwn
@@ -5,7 +5,7 @@ for pages included into other pages out of the wiki rendering process (shtml for
 since these pages can be included from a subdir. Ditto, links from \[[ inline ..]] or \[[map ..]].
 
 > You can make a wikilink absolute by prefixing it with a /, see 
-> [[subpage/linkingrules/]]. Pagespecs match absolute by default. But what do
+> [[ikiwiki/subpage/linkingrules/]]. Pagespecs match absolute by default. But what do
 > you mean "included from a subdir"? If you inline a page, its links shouldn't 
 > change. --Ethan
 
