--- a/doc/todo/discuss_without_login.mdwn
+++ b/doc/todo/discuss_without_login.mdwn
@@ -5,7 +5,7 @@ Any plugin or option for allowing website visitors to edit the discuss page with
 Or any plugin to add a feedback form (and maybe threads) to extend a Wiki webpage?
 
 Or is there per-page access control that can be fine-tuned to lock some users or groups for specific pages?
-(The [[pagespec]] does show a way to lock all pages except for Discussion pages, but I want some users to also be able to edit other pages.)
+(The [[ikiwiki/pagespec]] does show a way to lock all pages except for Discussion pages, but I want some users to also be able to edit other pages.)
 
 I want a way for website visitors to be able to give feedback on the wiki pages without having to sign up or log in.
 I don't want them to be able to edit the exiting wiki pages except maybe Discussion page.
