--- a/doc/todo/linktitle.mdwn
+++ b/doc/todo/linktitle.mdwn
@@ -1,19 +1,19 @@
 Pages could have a `linktitle` (perhaps via [[plugins/meta]]), and
 [[wikilinks|wikilink]] could use that title by default when linking to the
-page.  That would allow pages to have a simple, easily linkable name (without
-spaces, for instance), but use the proper title for links.  For example,
-[[PreprocessorDirective]] could use the `linktitle` "preprocessor directive",
-and pages for [[users]] could have `linktitle`s that put spaces in their
-names.
+page.  That would allow pages to have a simple, easily linkable name
+(without spaces, for instance), but use the proper title for links.  For
+example, [[ikiwiki/PreprocessorDirective]] could use the `linktitle`
+"preprocessor directive", and pages for [[users]] could have `linktitle`s
+that put spaces in their names.
 
-Ideally, perhaps two versions of the title could exist, one for general use,
-and an optional one for if the case in the actual link starts with an
-uppercase letter.  That would allow [[preprocessordirective]] to use the link
-text "preprocessor directive", but [[PreprocessorDirective]] to use the link
-text "Preprocessor Directive", for use at the beginnings of sentences.  If the
-second version did not exist, the first version would apply to both cases.
-However, that also seems like potential overkill, and less important than the
-basic functionality of `linktitle`.
---[[JoshTriplett]]
+Ideally, perhaps two versions of the title could exist, one for general
+use, and an optional one for if the case in the actual link starts with an
+uppercase letter.  That would allow [[ikiwiki/preprocessordirective]] to
+use the link text "preprocessor directive", but
+[[ikiwiki/PreprocessorDirective]] to use the link text "Preprocessor
+Directive", for use at the beginnings of sentences.  If the second version
+did not exist, the first version would apply to both cases. However, that
+also seems like potential overkill, and less important than the basic
+functionality of `linktitle`. --[[JoshTriplett]]
 
 [[wishlist]]
