--- a/doc/todo/shortcut_link_text.mdwn
+++ b/doc/todo/shortcut_link_text.mdwn
@@ -1,4 +1,4 @@
-[[plugins/shortcut]] creates link shortcut [[PreprocessorDirective]]s,
+[[plugins/shortcut]] creates link shortcut [[ikiwiki/PreprocessorDirective]]s,
 which substitute their argument into the specified shortcut URL to generate
 the link target, and use the argument as the link text.  For example, given
 the example [[shortcuts]], `\[[wikipedia ikiwiki]]` generates a link to
