--- a/underlays/basewiki/blog.mdwn
+++ b/underlays/basewiki/blog.mdwn
@@ -1,1 +1,5 @@
-../../doc/blog.mdwn
+[[meta redir=ikiwiki/blog delay=10]]
+
+This page has moved to [[ikiwiki/blog|ikiwiki/blog]]. Please update your
+links, as this redirection page will be removed in a future ikiwiki
+release.
