--- a/underlays/basewiki/helponformatting.mdwn
+++ b/underlays/basewiki/helponformatting.mdwn
@@ -1,1 +1,5 @@
-../../doc/helponformatting.mdwn
+[[meta redir=ikiwiki/formatting delay=10]]
+
+This page has moved to [[ikiwiki/formatting|ikiwiki/formatting]]. Please
+update your links, as this redirection page will be removed in a future
+ikiwiki release.
