--- a/underlays/basewiki/markdown.mdwn
+++ b/underlays/basewiki/markdown.mdwn
@@ -1,1 +1,5 @@
-../../doc/markdown.mdwn
+[[meta redir=ikiwiki/markdown delay=10]]
+
+This page has moved to [[ikiwiki/markdown|ikiwiki/markdown]]. Please update
+your links, as this redirection page will be removed in a future ikiwiki
+release.
