--- a/underlays/basewiki/openid.mdwn
+++ b/underlays/basewiki/openid.mdwn
@@ -1,1 +1,5 @@
-../../doc/openid.mdwn
+[[meta redir=ikiwiki/openid delay=10]]
+
+This page has moved to [[ikiwiki/openid|ikiwiki/openid]]. Please update your
+links, as this redirection page will be removed in a future ikiwiki
+release.
