--- a/underlays/basewiki/preprocessordirective.mdwn
+++ b/underlays/basewiki/preprocessordirective.mdwn
@@ -1,1 +1,6 @@
-../../doc/preprocessordirective.mdwn
+[[meta redir=ikiwiki/preprocessordirective delay=10]]
+
+This page has moved to
+[[ikiwiki/preprocessordirective|ikiwiki/preprocessordirective]]. Please
+update your links, as this redirection page will be removed in a future
+ikiwiki release.
