--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,12 @@
+ikiwiki (2.16) UNRELEASED; urgency=low
+
+  Many of the pages in ikiwiki's basewiki have been moved and renamed in this
+  release, to avoid the basewiki including pages with names like "blog".
+  Redirection pages have been left behind for these moved pages temporarily,
+  and will be removed later.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 08 Dec 2007 16:04:43 -0500
+
 ikiwiki (2.14) unstable; urgency=low
 
   This version of ikiwiki is more picky about symlinks in the path leading
