--- a/doc/ikiwiki.mdwn
+++ b/doc/ikiwiki.mdwn
@@ -1,4 +1,7 @@
 This wiki is powered by [ikiwiki](http://ikiwiki.info/).
+[[if test="enabled(version)"
+     then="(Currently running version [[version ]].)"
+]]
 
 Some documentation on using ikiwiki:
 
