fix up some links

--- a/doc/bugs/Spaces_in_link_text_for_ikiwiki_links.mdwn
+++ b/doc/bugs/Spaces_in_link_text_for_ikiwiki_links.mdwn
@@ -11,7 +11,7 @@ reported in [[index/discussion#index11h1]].
 > The above examples are ambiguous, only worked due to a bug, and were
 > never documented to work. So I'm not inclined to re-add support for them.
 > 
-> If you look at [[WikiLink]], it is clear that spaces cannot be used in
+> If you look at [[ikiwiki/WikiLink]], it is clear that spaces cannot be used in
 > WikiLinks. It also shows how to use underscores in the link text if you
 > want multiple words.
 >
