--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -19,7 +19,7 @@ You can use any field names you like, but here are some predefined ones:
 
   Specifies a link to another page. This can be used as a way to make the
   wiki treat one page as linking to another without displaying a user-visible
-  [[WikiLink]]:
+  [[ikiwiki/WikiLink]]:
 
 	\[[meta link=otherpage]]
 
