--- a/doc/plugins/rst.mdwn
+++ b/doc/plugins/rst.mdwn
@@ -10,7 +10,7 @@ Note that this plugin does not interoperate very well with the rest of
 ikiwiki. Limitations include:
 
 * There are issues with inserting raw html into documents, as ikiwiki 
-  does with [[WikiLinks|WikiLink]] and many 
+  does with [[WikiLinks|ikiwiki/WikiLink]] and many 
   [[PreprocessorDirectives|ikiwiki/PreprocessorDirective]].
 
 So while you may find this useful for importing old files into your wiki,
