--- a/doc/plugins/wikitext.mdwn
+++ b/doc/plugins/wikitext.mdwn
@@ -12,7 +12,7 @@ hyphen characters at the start of a line create a horizontal line. Newlines
 turn into the appropriate tags. Headers are matching equals signs around
 the header text -- the more signs, the lesser the header.
 
-Links are standard [[WikiLinks|WikiLink]], although you can also enable
+Links are standard [[WikiLinks|ikiwiki/WikiLink]], although you can also enable
 [[CamelCase]] links.
 
 Lists are indented text, by one tab or four spaces. In unordered lists,
