--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -92,8 +92,8 @@ Bulleted list
 
 ## Different sorts of links:
 
-* [[WikiLink]]
-* [[different_name_for_a_WikiLink|WikiLink]]
+* [[Features]]
+* [[different_name_for_a_WikiLink|ikiwiki/WikiLink]]
 * <http://www.gnu.org/>
 * [GNU](http://www.gnu.org/)
 * [Email](mailto:noone@invalid)
@@ -122,5 +122,3 @@ span also doesn't work:
 This sandbox is also a [[ikiwiki/blog]]!
 
 [[inline pages="sandbox/* and !*/Discussion" rootpage="sandbox" show="4" archive="yes"]]
-
-[[blubb]]
