--- a/doc/tags.mdwn
+++ b/doc/tags.mdwn
@@ -15,7 +15,7 @@ You can also tag a page with a visible link:
 
 	\[[taglink mytag]]
 
-This tag will be displayed just like a regular [[WikiLink]].
+This tag will be displayed just like a regular [[ikiwiki/WikiLink]].
 
 One way to use these tags is to create a [[ikiwiki/blog]] of pages that have a
 particular set of tags. Or just look at the [[BackLinks]] to a tag page to
