--- a/doc/todo/linktitle.mdwn
+++ b/doc/todo/linktitle.mdwn
@@ -1,6 +1,6 @@
 Pages could have a `linktitle` (perhaps via [[plugins/meta]]), and
-[[wikilinks|wikilink]] could use that title by default when linking to the
-page.  That would allow pages to have a simple, easily linkable name
+[[wikilinks|ikiwiki/wikilink]] could use that title by default when linking
+to the page.  That would allow pages to have a simple, easily linkable name
 (without spaces, for instance), but use the proper title for links.  For
 example, [[ikiwiki/PreprocessorDirective]] could use the `linktitle`
 "preprocessor directive", and pages for [[users]] could have `linktitle`s
