--- a/doc/todo/mailnotification/discussion.mdwn
+++ b/doc/todo/mailnotification/discussion.mdwn
@@ -10,5 +10,5 @@ Mail notifications are probably not required. For example I get lots of comments
 Perhaps a powerful little UNDO feature on RecentChanges is all that is needed.
 
 > Um, if you'll look at the [[mailnotification]] page, ikiwiki has
-> supported mail notifications for > 1 year, with a powerful [[PageSpec]]
+> supported mail notifications for > 1 year, with a powerful [[ikiwiki/PageSpec]]
 > to allow chosing which pages you want to be notified about. --[[Joey]]
