--- a/doc/bugs/wiki_links_still_processed_inside_code_blocks.mdwn
+++ b/doc/bugs/wiki_links_still_processed_inside_code_blocks.mdwn
@@ -1,8 +1,8 @@
 In [[ikiwiki/markdown]] syntax, none of the other special characters get processed
-inside a code block.  However, in ikiwiki, [[wiki_links|wikilink]] and
+inside a code block.  However, in ikiwiki, [[wiki_links|ikiwiki/wikilink]] and
 [[preprocessor_directives|ikiwiki/preprocessordirective]] still get processed
 inside a code block, requiring additional escaping.  For example, `[links
-don't work](#here)`, but `a [[wikilink]] becomes HTML`. --[[JoshTriplett]]
+don't work](#here)`, but `a [[ikiwiki/wikilink]] becomes HTML`. --[[JoshTriplett]]
 
 Indented lines provide a good way to escape a block of text containing
 markdown syntax, but ikiwiki links like \[[this]] are still
