--- a/doc/plugins/html.mdwn
+++ b/doc/plugins/html.mdwn
@@ -5,7 +5,7 @@ This plugin lets html pages be used as source pages for the wiki. The
 html pages will still be wrapped in the same html template as any other
 page, so for best results you should include only the page body in the html
 file. Also, if the [[htmlscrubber]] plugin is enabled, the html pages will be
-sanitised like any other page. You can also use standard [[WikiLink]]s etc
-in the html pages.
+sanitised like any other page. You can also use standard 
+[[WikiLinks|ikiwiki/WikiLink]] etc in the html pages.
 
 This plugin is included in ikiwiki, but is not enabled by default.
