--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -5,13 +5,14 @@ This plugin allows tagging pages. List tags as follows:
 
 	\[[tag tech life linux]]
 
-The tags work the same as if you had put a (hidden) [[WikiLink]] on the page
-for each tag, so you can use a [[ikiwiki/PageSpec]] match all pages that are
-tagged with a given tag, for example. The tags will also show up on blog
-entries and at the bottom of the tagged pages, as well as in RSS and Atom
-feeds.
+The tags work the same as if you had put a (hidden) [[ikiwiki/WikiLink]] on
+the page for each tag, so you can use a [[ikiwiki/PageSpec]] match all
+pages that are tagged with a given tag, for example. The tags will also
+show up on blog entries and at the bottom of the tagged pages, as well as
+in RSS and Atom feeds.
 
-If you want a visible [[WikiLink]] along with the tag, use taglink instead:
+If you want a visible [[ikiwiki/WikiLink]] along with the tag, use taglink
+instead:
 
 	\[[taglink foo]]
 	\[[taglink tagged_as_foo|foo]]
