--- a/doc/smileys.mdwn
+++ b/doc/smileys.mdwn
@@ -48,7 +48,7 @@ For example: {*} B) {*}
 To change the supported smileys, just edit the lists on this page.
 Note that the format is important; each list item should start with the
 text that is turned into the smiley, escaped so that users can see what
-produces it, followed by a [[WikiLink]] to the image to display.
+produces it, followed by a [[ikiwiki/WikiLink]] to the image to display.
 
 /!\ Bear in mind that the link to the image needs to be written in a way that
 will work if it's copied to other pages on the wiki. So be sure to include the
