--- a/doc/todo/__47___should_point_to_top-level_index.mdwn
+++ b/doc/todo/__47___should_point_to_top-level_index.mdwn
@@ -1,3 +1,3 @@
-Since `/` now works in [[WikiLink]]s to anchor links to the root of the site
+Since `/` now works in [[ikiwiki/WikiLink]]s to anchor links to the root of the site
 (for instance, `\[[/index]]`), `/` alone should work as a reference to the
 top-level index page (for instance, `\[[Home|/]]`). --[[JoshTriplett]]
